--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -5,7 +5,7 @@
         <input type="text" class="form-control" name="username" 
         [(ngModel)]="model.username" placeholder="user name">
     </div>
-    <div class="form-group">
+    <!-- <div class="form-group">
        <label>Who is your favourite</label> 
                   <select class="form-control">
                <option *ngFor="let user of usersFromHomeComponent" [value]="user.userName">
@@ -13,7 +13,7 @@
                </option>
            </select>
        
-    </div>
+    </div> -->
     <div class="form-group">
         <input type="password" class="form-control" name="password" 
         [(ngModel)]="model.password" placeholder="Password">
@@ -24,3 +24,4 @@
 
     </div>
 </form>
+
