--- a/client/src/app/errors/server-error/server-error.component.html
+++ b/client/src/app/errors/server-error/server-error.component.html
@@ -1,6 +1,6 @@
 <h4>Internal Server Error - refreshing the page will make the error disapear !</h4>
 <ng-container *ngIf="error">
-    <h5 class="text-danger">Error: {{error.Message}}</h5>
+    <h5 class="text-danger">Error: {{error.message}}</h5>
     <p class="font-weight-bold">Note: If you are seeing this then Angular is probabply not to blame</p>
     <p>What to do next?</p>
     <ol>
