--- a/client/src/app/nav/nav.component.css
+++ b/client/src/app/nav/nav.component.css
@@ -1,3 +1,10 @@
-.dropdown-menu, .dropdown-item{
-    cursor: pointer;
+.dropdown-menu,
+.dropdown-item {
+  cursor: pointer;
+}
+
+img {
+  max-height: 50px;
+  border: 2px solid #fff;
+  display: inline;
 }
