--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,9 +1,15 @@
 <form [formGroup]='registerForm' (ngSubmit)="register()" autocomplete="off">
     <h2 class="text-center text-primary">Sign Up</h2>
     <hr>
-    <div class="form-group">
-        <input type="text" class="form-control" formControlName='username' placeholder="user name">
-    </div>
+    
+    <app-text-input [formControl]='registerForm.controls["username"]' 
+        [label]='"Username"'></app-text-input>
+    <app-text-input [formControl]='registerForm.controls["password"]' 
+        [label]='"Password"' [type]='"password"'></app-text-input>
+    <app-text-input [formControl]='registerForm.controls["confirmPassword"]' 
+        [label]='"confirm Password"' [type]='"password"'></app-text-input>
+    
+    
     <!-- <div class="form-group">
        <label>Who is your favourite</label> 
                   <select class="form-control">
@@ -12,15 +18,23 @@
                </option>
            </select>
        
-    </div> -->
+    </div> 
     <div class="form-group">
-        <input type="password" class="form-control" formControlName='password' 
-        placeholder="Password">
-    </div>
-    <div class="form-group">
-        <input type="password" class="form-control" formControlName='confirmPassword' 
-        placeholder="confirm Password">
-    </div>
+        <input 
+            [class.is-invalid] = 'registerForm.get("password").errors 
+                && registerForm.get("password").touched'
+            type="password"     
+            class="form-control" 
+            formControlName='password' 
+            placeholder="Password">
+        <div *ngIf='registerForm.get("password").hasError("required")' 
+            class="invalid-feedback">Please enter a  password</div>
+        <div *ngIf='registerForm.get("password").hasError("minlength")' 
+            class="invalid-feedback">Password must be at least 4 characters</div>
+        <div *ngIf='registerForm.get("password").hasError("maxlength")' 
+            class="invalid-feedback">Password must be at most 8 characters</div>
+    </div>-->
+    
     <div class="form-group text-center">
         <button class="btn btn-success mr-2" type="submit">Register</button>
         <button class="btn btn-default mr-2" (click)="cancel()" type="button">Cancel</button>
