--- a/client/src/app/members/memeber-detail/memeber-detail.component.html
+++ b/client/src/app/members/memeber-detail/memeber-detail.component.html
@@ -21,8 +21,7 @@
                 <div>
                     <strong>Member Since:</strong>
                     <p>{{member.creadted | date: 'mediumDate'}}</p>
-                </div>
-               
+                </div> 
             </div>
             <div class="card-footer">
                 <div class="btn-group d-flex">
@@ -33,24 +32,23 @@
         </div>
     </div>
     <div class="col-8">
-        <tabset class="member-tabset">
-            <tab heading='About {{member.knownAs}}'>
+        <tabset class="member-tabset" #memberTabs>
+            <tab heading='About {{member.knownAs}}' (selectTab)="onTabActivated($event)">
                 <h4>Description</h4>
                 <p>{{member.introduction}}</p>
                 <h4>Looking for</h4>
                 <p>{{member.lookinFor}}</p>
             </tab>
-            <tab heading='Interests'>
+            <tab heading='Interests' (selectTab)="onTabActivated($event)">
                 <h4>Interests</h4>
                 <p>{{member.interests}}</p>
             </tab>
-            <tab heading='Photos'>
+            <tab heading='Photos' (selectTab)="onTabActivated($event)">
                 <ngx-gallery [options]="galleryOptions" [images]="galleryImages" class="ngx-gallery" 
                 style="display: inline-block; margin-bottom: 20px; "></ngx-gallery>
             </tab>
-            <tab heading='Messages'>
-               <p>Messges will go here</p>
-              
+            <tab heading='Messages' (selectTab)="onTabActivated($event)">
+              <app-member-messagessec [messages]="messages"></app-member-messagessec>
             </tab>
         </tabset>
     </div>
