--- a/client/src/app/messages/messages.component.html
+++ b/client/src/app/messages/messages.component.html
@@ -9,7 +9,7 @@
         (click)="loadMessages()"><i class="fa fa-envelope-open"></i> Inbox</button>
 
         <button class="btn btn-primary" btnRadio="Outbox" [(ngModel)]="container" 
-        (click)="loadMessages()"><i class="fa fa-envelope-plane"></i> Outbox</button>
+        (click)="loadMessages()"><i class="fa fa-paper-plane"></i> Outbox</button>
     </div>
 </div>
 <div class="row" *ngIf="messages?.length === 0">
@@ -30,10 +30,36 @@
         <td>{{message.content}}</td>
         <td>
             <div *ngIf="container ==='Outbox'">
-                <img  src ="{{message.recipientPhotoUrl || './assets/user.png'}}" 
+                <img  
+                class="img-circle rounded-circle mr-2"
+                src ="{{message.recipientPhotoUrl || './assets/user.png'}}" 
                 alt="{{message.recipientUsername}}">
+                <strong>{{message.recipientUsername | titlecase}}</strong>
+            </div>
+            <div *ngIf="container !=='Outbox'">
+                <img  
+                class="img-circle rounded-circle mr-2"
+                src ="{{message.senderPhotoUrl || './assets/user.png'}}" 
+                alt="{{message.senderUsername}}">
+                <strong>{{message.senderUsername | titlecase}}</strong>
             </div>
         </td>
+        <td>{{message.messageSent | timeago}}</td>
+        <td><button class="btn btn-danger">Delete</button></td>
     </tr>
     </table>
+</div>
+
+<div class="d-flex justify-content-center" *ngIf="pagination">
+    <pagination 
+        [boundaryLinks]="true" 
+        [totalItems]="pagination.totalItems"
+        [itemsPerPage] ="pagination.itemsPerPage"
+        [(ngModel)]="pagination.currentPage"
+        (pageChanged) ="pageChanged($event)"
+        previousText="&lsaquo;" 
+        nextText="&rsaquo;" 
+        firstText="&laquo;" 
+        lastText="&raquo;">
+    </pagination>
 </div>
