--- a/client/src/app/members/memeber-detail/memeber-detail.component.html
+++ b/client/src/app/members/memeber-detail/memeber-detail.component.html
@@ -1,6 +1,6 @@
 <!-- <h1 *ngIf="member">{{member.knownAs}}</h1> -->
 
-<div class="row" *ngIf="member">
+<div class="row">
     <div class="col-4">
         <div class="card">
             <img src="{{member.photoUrl || './assets/user.png'}}" alt="{{member.knownAs}}" 
@@ -26,7 +26,7 @@
             <div class="card-footer">
                 <div class="btn-group d-flex">
                     <button class="btn btn-primary">Like</button>
-                    <button class="btn btn-success">Message</button>
+                    <button class="btn btn-success" (click)="selectTab(3)">Message</button>
                 </div>
             </div>
         </div>
@@ -37,7 +37,7 @@
                 <h4>Description</h4>
                 <p>{{member.introduction}}</p>
                 <h4>Looking for</h4>
-                <p>{{member.lookinFor}}</p>
+                <p>{{member.lookingFor}}</p>
             </tab>
             <tab heading='Interests' (selectTab)="onTabActivated($event)">
                 <h4>Interests</h4>
@@ -48,7 +48,7 @@
                 style="display: inline-block; margin-bottom: 20px; "></ngx-gallery>
             </tab>
             <tab heading='Messages' (selectTab)="onTabActivated($event)">
-              <app-member-messagessec [messages]="messages"></app-member-messagessec>
+              <app-member-messagessec [messages]="messages" [username]="member.username"></app-member-messagessec>
             </tab>
         </tabset>
     </div>
