--- a/client/src/app/messages/messages.component.html
+++ b/client/src/app/messages/messages.component.html
@@ -11,10 +11,12 @@
         <button class="btn btn-primary" btnRadio="Outbox" [(ngModel)]="container" 
         (click)="loadMessages()"><i class="fa fa-paper-plane"></i> Outbox</button>
     </div>
+    <div  *ngIf="messages?.length === 0">
+        <br>
+        <h3> No Messages</h3>
+    </div>
 </div>
-<div class="row" *ngIf="messages?.length === 0">
-    <h3>No Messages</h3>
-</div>
+
 
 <div class="row" *ngIf="messages?.length>0">
     <table class="table table-hover" style="cursor: pointer">
@@ -24,9 +26,10 @@
             <th style="width: 20%;">Sent / Receive</th>
             <th style="width: 20%;"></th>
         </tr>
-        <tr *ngFor="let message of messages" 
+        <tr [hidden]="loading" *ngFor="let message of messages" 
         routerLink='{{container ==="Outbox" 
-        ? "/members/" + message.recipientUsername: "/members/"+ message.senderUsername}}'>
+        ? "/members/" + message.recipientUsername: "/members/"+ message.senderUsername}}' 
+        [queryParams]='{tab: 3}'>
         <td>{{message.content}}</td>
         <td>
             <div *ngIf="container ==='Outbox'">
@@ -50,7 +53,7 @@
     </table>
 </div>
 
-<div class="d-flex justify-content-center" *ngIf="pagination">
+<div class="d-flex justify-content-center" *ngIf="pagination && !loading && messages?.length >0">
     <pagination 
         [boundaryLinks]="true" 
         [totalItems]="pagination.totalItems"
